--- a/examples/params-page/params-page.html
+++ b/examples/params-page/params-page.html
@@ -1,3 +1,3 @@
 <div mob-block="params-page">
-    <span mob-bind>{test}</span>
+    <span mob-bind>{test} - {params.id}-{params.name}</span>
 </div>
