multiple same elements support, cleanup templates abit

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head></head>
 <body>
     <template mob-template="./main-page.html"></template>
-    <script type="module" src="index.js"></script>
+    <template mob-template="./main-page.html"></template>
+    <template mob-template="./main-page.html"></template>
+    <script type="module" src="./index.js"></script>
 </body>
 </html>
