--- a/examples/main-page.html
+++ b/examples/main-page.html
@@ -15,8 +15,10 @@
         <div mob-repeat-item>
             <span>Id: {item.id}</span>
             <span>Name: {item.name}</span>
+            <span>Index: {$index}</span>
+
             <template
-                    mob-on-click="remove(item)"
+                    mob-on-click="remove($index)"
                     mob-param-id="item.id"
                     mob-param-name="item.name"
                     mob-param-item="item"
@@ -30,6 +32,7 @@
         <div mob-repeat-item>
             <span>Id: {item.id}</span>
             <span>Name: {item.name}</span>
+            <span>Index: {$index}</span>
             <template
                     mob-on-click="remove(item)"
                     mob-param-id="item.id"
