fix update +  on repeat

--- a/examples/main-page.html
+++ b/examples/main-page.html
@@ -44,8 +44,8 @@
         </div>
     </div>
     <div>
-        <button mob-click="pushItem">Push</button>
-        <button mob-click="alertMe">Pop </button>
-        <button mob-click="updateFirst">Update first </button>
+        <button mob-on-click="pushItem">Push</button>
+        <button mob-on-click="alertMe">Pop </button>
+        <button mob-on-click="updateFirst">Update first </button>
     </div>
 </div>
